PROD_10-24-19/force-app/main/default/objects/Property_Relation_Contact__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant Rep</fullName>
            </value>
            <value>
                <fullName>Listing Rep</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>