PROD_10-24-19/force-app/main/default/objects/Property_Relation_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>